service_mesh/virtual_service/Istio/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: web-destination
spec:
  host: webservice
  subsets:
  - name: v1
    labels:
      version: v1.0
