service_mesh/virtual_service/Istio/virtualService_forward.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: webservice-vs
spec:
  hosts:
    - web-server
  http:
  - route:
    - destination:
        host: webservice
        subset: v1
