service_mesh/virtual_service/Istio/virtualService_weight.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: webservice-vs
spec:
  hosts:
    - webservice
  http:
  - route:
    - destination:
        host: webservice
        subset: v1
      weight: 50
    - destination:
        host: webservice
        subset: v2
      weight: 50
